--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1475,7 +1475,7 @@ footer .credits a {
 }
 
 .btn-download:hover {
-  background-color: #4625ff;
-  color: #13019b;
+  background-color: #2441ff;
+  color: #ffffff;
   text-decoration: none;
 }
