--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,26 +1,19 @@
-/**
-* Template Name: DevFolio
-* Updated: Mar 10 2023 with Bootstrap v5.2.3
-* Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 body {
-  background-color: #f5f5f5;
+  background-color: #1a1f20;
   color: #4e4e4e;
 }
 
 h1,
-h2,
 h3,
 h4,
-h5,
 h6 {
-  color: #1e1e1e;
+  color: #e4e4e4;
+}
+h5{
+  color: #000000;
+}
+h2{
+  color: #000000;
 }
 
 a {
@@ -100,7 +93,7 @@ a:hover {
 }
 
 .overlay-mf {
-  background-color: #0078ff;
+  background-color: #1b1b1b;
 }
 
 .overlay-mf {
@@ -163,7 +156,7 @@ a:hover {
 
 .subtitle-a {
   text-decoration: none;
-  color: #4e4e4e;
+  color: #d3d3d3;
 }
 
 .line-mf {
@@ -849,7 +842,7 @@ a:hover {
 }
 
 .skill-mf .progress {
-  background-color: #cde1f8;
+  background-color: #747474;
   margin: 0.5rem 0 1.2rem 0;
   border-radius: 0;
   height: 0.7rem;
@@ -857,7 +850,7 @@ a:hover {
 
 .skill-mf .progress .progress-bar {
   height: 0.7rem;
-  background-color: #0078ff;
+  background-color: #000000;
 }
 
 /*--------------------------------------------------------------
@@ -1446,7 +1439,7 @@ footer {
   text-align: center;
   color: #fff;
   padding: 25px 0;
-  background: #0062d3;
+  background: #252525;
 }
 
 footer .copyright {
@@ -1475,7 +1468,7 @@ footer .credits a {
 }
 
 .btn-download:hover {
-  background-color: #0078FF;
+  background-color: #353535;
   color: #ffffff;
   text-decoration: none;
 }
