Optimized and Updated

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1459,8 +1459,8 @@ footer .credits a {
 --------------------------------------------------------------*/
 .btn-download {
   background-color: transparent;
-  border-color: #000000;
-  color: #000000;
+  border-color: #ffffff;
+  color: #ffffff;
   font-size: 18px;
   font-weight: 600;
   padding: 10px 30px;
